Add block <pluginRepositories> and edit version.

--- a/03_Life_Cycle/pom.xml
+++ b/03_Life_Cycle/pom.xml
@@ -22,12 +22,20 @@
         </dependency>
     </dependencies>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>org.apache.maven.plugins</id>
+            <name>checkstyle</name>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+        </pluginRepository>
+    </pluginRepositories>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.0.1-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <id>checkstyle</id>
