--- a/05_Microservice_Organization/discovery/config/gateway-local.yml
+++ b/05_Microservice_Organization/discovery/config/gateway-local.yml
@@ -1,6 +1,15 @@
 spring:
   application:
     name: gateway
+  cloud:
+    gateway:
+      routes:
+        - id: test_rewrite_path
+          uri: "lb://order-service"
+          predicates:
+            - Path=/skillbox/api/order/**
+          filters:
+            - RewritePath=/skillbox(?<segment>/?.*), $\{segment}
 management:
   endpoints:
     web:
@@ -9,4 +18,3 @@ management:
 logging:
   level:
     org.springframework.cloud.gateway: TRACE
-
