--- a/05_Microservice_Organization/order-service/src/main/resources/bootstrap.yml
+++ b/05_Microservice_Organization/order-service/src/main/resources/bootstrap.yml
@@ -5,3 +5,15 @@ spring:
     name: order-service
   profiles:
     active: local
+  cloud:
+    config:
+      enabled: true
+      discovery:
+        enabled: true
+        service-id: discovery
+      fail-fast: true
+eureka:
+  client:
+    enabled: true
+    service-url:
+      defaultZone: http://localhost:8888/eureka/
